tests/invalid/set_isdisjoint_wrong_arg_count/main.py
def run_case() -> None:
    s: set[int] = {1, 2}
    b: bool = s.isdisjoint()
    print(b)


if __name__ == "__main__":
    run_case()
